--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<ul>
-    <li>
-        <a [routerLink]="['/recipe-list']">Recepten</a>
-    </li>
-    <li>
-        <a [routerLink]="['/recipe-edit']">Recept toevoegen</a>
-    </li>
-    <li>
-        <a [routerLink]="['/tips']">Tips</a>
-    </li>
-</ul>
+<app-header></app-header>
 <router-outlet></router-outlet>
